# firn-pinn

./: .gitignore  README.md  compare_firn_solutions.py  evaluate_pinn_error.py  plot_classical.py  pyproject.toml  requirements.txt
classical_solver/: COEFFv.m  DirectPbResc.m  GenerateFirnData.m  InversePbRescV.m  Testnoise.m  testinv3nonDecDifMeshfmincon.m
configs/: defaults.yaml  firn_lbfgs.yaml  firn_lbfgs_refine.yaml  firn_tight.yaml
data/raw/: firn_forward.mat
doc/: pipeline.md  repo_hierarchy.md  understanding_plan.md
experiments/: run_firn_pinn.py
matlab/: COEFFc.m  GenerateFirnData.asv  GenerateFirnData.m  LinearSpline.m  Test.m
runs/dev_sanity_20251126-125133/: metadata.json
runs/firn_default_20251127-094242/: metadata.json  model.pt
runs/firn_default_20251127-100505/: metadata.json
runs/firn_tight_20251127-100841/: firn_tight.yaml  metadata.json  metrics.csv  model.pt
scripts/: dev_sanity.py  plot_results.py  train.py
src/: direct_pinn.py  evaluation.py  firn_data.py  firn_discrete_pinn.py  firn_problem.py  losses.py  model.py  utils.py
src/firn_pinn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pinns/: base_pinn.py  config.py  firn.py  models.py
src/pinns/core/: base_pinn.py
src/pinns/models/: factory.py  neural_net.py
src/pinns/problems/: firn.py
src/pinns/utils/: logging.py  plotting.py  sampling.py  seed.py  training.py
tests/: test_firn_problem.py  test_losses.py  test_sampling.py
