[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firn-pinn"
version = "0.1.0"
description = "Physics-informed neural network for the rescaled firn gas-diffusion problem."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
